plugins {
    id 'java'
    id 'idea'
}

group 'ca.teamdman.owo-bot'
version '1.0.0'

sourceCompatibility = JavaVersion.VERSION_1_10

repositories {
    mavenCentral()
    jcenter()
}

//create a single Jar with all dependencies
task fatJar(type: Jar) {
    manifest {
        attributes 'Implementation-Title': 'OwO Bot Jar File',
                'Implementation-Version': version,
                'Main-Class': 'core.OwO'
    }
    baseName = project.name + '-all'
    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'

    // https://mvnrepository.com/artifact/ch.qos.logback/logback-classic
    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
    // https://mvnrepository.com/artifact/ch.qos.logback/logback-core
    compile group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
    // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'

    compile group: 'eu.infomas', name: 'annotation-detector', version: '3.0.5'

    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.23.1'

    implementation 'com.google.code.gson:gson:2.8.5'

    compile 'com.github.pcj:google-options:1.0.0'

    compile "com.discord4j:Discord4J:${discord4j_version}"
}
//
//idea {
//    module {
//        sourceDirs += file('src')
//    }
//}
